force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/TR_Integration_Manager_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TR_Integration_Manager_Setting</label>
</CustomObject>