force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Client_default_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Client_default_RecordType__c</fullName>
    <label>Client default RecordType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>