force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/codeErrorToRetry__c.field-meta.xml
<CustomField>
    <fullName>codeErrorToRetry__c</fullName>
    <label>codeErrorToRetry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>