force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Created_Before_Days__c.field-meta.xml
<CustomField>
    <fullName>Created_Before_Days__c</fullName>
    <label>Created Before Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>