force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Excluded_UserId_ForActivation__c.field-meta.xml
<CustomField>
    <fullName>Excluded_UserId_ForActivation__c</fullName>
    <label>Excluded_UserId_For_Activation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>