force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Included_Countries__c.field-meta.xml
<CustomField>
    <fullName>Included_Countries__c</fullName>
    <label>Included_Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>