force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Included_Profile__c.field-meta.xml
<CustomField>
    <fullName>Included_Profile__c</fullName>
    <label>Included_Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>