force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Included_UserName__c.field-meta.xml
<CustomField>
    <fullName>Included_UserName__c</fullName>
    <label>Included_UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>