force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Integration_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>Integration_ProfileName__c</fullName>
    <label>Integration_ProfileName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>