force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Is_Active_C360_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_C360_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox gives us the possibility to stop all the client 360 process in case of extreme emergency</description>
    <label>Is_Active_C360_Integration</label>
    <type>Checkbox</type>
</CustomField>