force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Is_Active_Merge__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to enable or disable instant merge</description>
    <label>Is Active Merge</label>
    <type>Checkbox</type>
</CustomField>