force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Json_Added__c.field-meta.xml
<CustomField>
    <fullName>Json_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Json Added</label>
    <type>Checkbox</type>
</CustomField>