force-clientforce/main/default/objects/TR_Integration_Manager_Setting__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <label>Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>